[gd_scene load_steps=13 format=2]

[ext_resource path="res://PixelArt/UI/closetUI.png" type="Texture" id=1]
[ext_resource path="res://Others/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Others/Fonts/joystix monospace.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://PixelArt/Characters/Players/DefaultCharacter/body_default.png" type="Texture" id=4]
[ext_resource path="res://PixelArt/Characters/Players/DefaultCharacter/shoes_default.png" type="Texture" id=5]
[ext_resource path="res://PixelArt/Characters/Players/DefaultCharacter/head_default.png" type="Texture" id=6]
[ext_resource path="res://Others/Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://UI/ClosetUI.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 7 )

[node name="ClosetUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.002
margin_top = 0.707153
margin_bottom = 0.0671387
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="ui_labels" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Closet" type="Label" parent="ui_labels"]
margin_left = 168.0
margin_top = 48.0
margin_right = 296.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Closet"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Label" parent="ui_labels"]
margin_left = 317.0
margin_top = 207.0
margin_right = 394.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0.647059, 0.380392, 0.321569, 1 )
custom_fonts/font = SubResource( 4 )
text = "Save"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="head" type="Label" parent="ui_labels"]
margin_left = 192.0
margin_top = 81.0
margin_right = 264.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 2 )
text = "head"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="body" type="Label" parent="ui_labels"]
margin_left = 192.0
margin_top = 151.0
margin_right = 264.0
margin_bottom = 167.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 2 )
text = "body"
align = 1
valign = 1

[node name="shoes" type="Label" parent="ui_labels"]
margin_left = 192.0
margin_top = 221.0
margin_right = 264.0
margin_bottom = 237.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 2 )
text = "shoes"
align = 1
valign = 1

[node name="skin_name" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="head" type="Label" parent="skin_name"]
margin_left = 184.0
margin_top = 97.0
margin_right = 274.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 3 )
text = "default head"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="body" type="Label" parent="skin_name"]
margin_left = 184.0
margin_top = 168.0
margin_right = 274.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 3 )
text = "default body"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shoes" type="Label" parent="skin_name"]
margin_left = 184.0
margin_top = 237.0
margin_right = 274.0
margin_bottom = 250.0
custom_colors/font_color = Color( 0.360784, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 3 )
text = "default shoes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_preview" type="Node2D" parent="."]
position = Vector2( 352, 144 )
scale = Vector2( 3, 3 )

[node name="head" type="Sprite" parent="player_preview"]
texture = ExtResource( 6 )
hframes = 8
vframes = 6

[node name="body" type="Sprite" parent="player_preview"]
texture = ExtResource( 4 )
hframes = 8
vframes = 6

[node name="shoes" type="Sprite" parent="player_preview"]
texture = ExtResource( 5 )
hframes = 8
vframes = 6

[node name="buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ChangeHead" type="TextureButton" parent="buttons"]
anchor_left = 0.495
anchor_top = 0.294
anchor_right = 0.523
anchor_bottom = 0.369
margin_left = -0.160034
margin_top = -0.0800018
margin_right = -0.0639954
margin_bottom = -0.0800018
focus_mode = 0
enabled_focus_mode = 0

[node name="ChangePreviousHead" type="TextureButton" parent="buttons"]
anchor_left = 0.29
anchor_top = 0.294
anchor_right = 0.319
anchor_bottom = 0.369
margin_left = 0.279953
margin_top = -0.0800018
margin_right = -0.192001
margin_bottom = -0.0800095
focus_mode = 0
enabled_focus_mode = 0

[node name="ChangeBody" type="TextureButton" parent="buttons"]
anchor_left = 0.495
anchor_top = 0.512
anchor_right = 0.523
anchor_bottom = 0.587
margin_left = -0.160065
margin_top = 0.159988
margin_right = -0.0639954
margin_bottom = 0.160004
focus_mode = 0
enabled_focus_mode = 0

[node name="ChangePreviousBody" type="TextureButton" parent="buttons"]
anchor_left = 0.29
anchor_top = 0.512
anchor_right = 0.319
anchor_bottom = 0.587
margin_left = 0.279953
margin_top = 0.159988
margin_right = -0.192001
margin_bottom = 0.160004
focus_mode = 0
enabled_focus_mode = 0

[node name="ChangeShoes" type="TextureButton" parent="buttons"]
anchor_left = 0.495
anchor_top = 0.731
anchor_right = 0.523
anchor_bottom = 0.806
margin_left = -0.160065
margin_top = 0.0800018
margin_right = -0.0639954
margin_bottom = 0.0799866
focus_mode = 0
enabled_focus_mode = 0

[node name="ChangePreviousShoes" type="TextureButton" parent="buttons"]
anchor_left = 0.29
anchor_top = 0.731
anchor_right = 0.319
anchor_bottom = 0.806
margin_left = 0.279953
margin_top = 0.0800018
margin_right = -0.192001
margin_bottom = 0.0799866
focus_mode = 0
enabled_focus_mode = 0

[node name="Save" type="TextureButton" parent="buttons"]
anchor_left = 0.548
anchor_top = 0.641
anchor_right = 0.704
anchor_bottom = 0.709
margin_left = -0.264008
margin_top = -0.12001
margin_right = 0.12796
margin_bottom = 0.11998
focus_mode = 0
enabled_focus_mode = 0

[connection signal="pressed" from="buttons/ChangeHead" to="." method="_on_ChangeHead_pressed"]
[connection signal="pressed" from="buttons/ChangePreviousHead" to="." method="_on_ChangePreviousHead_pressed"]
[connection signal="pressed" from="buttons/ChangeBody" to="." method="_on_ChangeBody_pressed"]
[connection signal="pressed" from="buttons/ChangePreviousBody" to="." method="_on_ChangePreviousBody_pressed"]
[connection signal="pressed" from="buttons/ChangeShoes" to="." method="_on_ChangeShoes_pressed"]
[connection signal="pressed" from="buttons/ChangePreviousShoes" to="." method="_on_ChangePreviousShoes_pressed"]
[connection signal="pressed" from="buttons/Save" to="." method="_on_Save_pressed"]
